--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - julia -e 'Pkg.clone(pwd()); Pkg.build("MultivariateAnomalies"); Pkg.test("MultivariateAnomalies"; coverage=true)'
 after_success:
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(joinpath(Pkg.dir("MultivariateAnomalies"), "docs")); include("make.jl")'
+  - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl"))'
