--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,4 +22,4 @@ docs_dir: 'build'
 
 pages:
   - Home: index.md
-  - Manual: man/FeatureExtraction.md, man/DetectionAlgorithms.md
+  - Manual: man/FeatureExtraction.md, man/DetectionAlgorithms.md, man/DistDensity.md
