--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,3 +19,12 @@ markdown_extensions:
   - mdx_math
 
 docs_dir: 'build'
+
+pages:
+- Home: 'index.md'
+- Manual:
+    - 'Preprocessing': 'man/Preprocessing.md'
+    - 'Distances and Densities': 'man/DistancesDensity.md'
+    - 'Anomaly Detection': 'man/DetectionAlgorithms.md'
+    - 'Postprocessing': 'man/Postprocessing.md'
+    - 'AUC': 'man/AUC.md'
