--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -23,8 +23,8 @@ docs_dir: 'build'
 pages:
 - Home: 'index.md'
 - Manual:
-    - 'Anomaly Detection - convenience': 'man/HighLevelFunctions.md'
-    - 'Anomaly Detection': 'man/DetectionAlgorithms.md'
+    - 'High Level Functions': 'man/HighLevelFunctions.md'
+    - 'Anomaly Detection Algorithms': 'man/DetectionAlgorithms.md'
     - 'Distances and Densities': 'man/DistancesDensity.md'
     - 'Preprocessing': 'man/Preprocessing.md'
     - 'Postprocessing': 'man/Postprocessing.md'
