--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
   - julia -e 'Pkg.clone(pwd()); Pkg.build("MultivariateAnomalies"); Pkg.test("MultivariateAnomalies"; coverage=true)'
 after_success:
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); using MultivariateAnomalies; include(joinpath("docs", "make.jl"))'
