--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+
 os:
   - linux
   - osx
+
 julia:
-  - 0.6
-#  - nightly
+  - 0.7
+  - 1.0
+  - nightly
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    -julia: nightly
+
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("MultivariateAnomalies"); Pkg.test("MultivariateAnomalies"; coverage=true)'
+  
 after_success:
   - julia -e 'Pkg.add("Documenter")'
   - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl"))'
