--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 
+codecov: true
+
 os:
   - linux
   - osx
@@ -8,6 +10,7 @@ os:
 julia:
   - 0.7
   - 1.0
+  - 1.1
   - nightly
 
 matrix:
@@ -20,4 +23,4 @@ notifications:
   
 after_success:
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
