--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,33 @@ notifications:
 after_success:
   - julia -e 'Pkg.add("Documenter")'
   - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); include(joinpath("docs", "make.jl")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+
+jobs:
+  include:
+    - stage: "Testing"
+      os: - linux
+          - osx
+      julia:
+          - 0.7
+          - 1.0
+          - 1.1
+          - nightly
+      matrix:
+      fast_finish: true
+      allow_failures: 
+        julia: nightly
+      notifications:
+        email: false
+      after_success:
+           - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+          
+    - stage: "Documentation"
+      julia: 1.1
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
