--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,27 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
+language: julia
+
+codecov: true
 
 jobs:
   include:
     - stage: "Testing"
       os: - linux
           - osx
+          
       julia:
           - 0.7
           - 1.0
           - 1.1
           - nightly
+          
       matrix:
-      fast_finish: true
-      allow_failures: 
-        julia: nightly
-      notifications:
-        email: false
-      after_success:
+        fast_finish: true
+        allow_failures: 
+            -julia: nightly
+        notifications:
+            email: false
+        after_success:
            - julia -e 'cd(Pkg.dir("MultivariateAnomalies")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
           
