--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ jobs:
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
+                                               Pkg.instantiate(); Pkg.add("Documenter")'
         - julia --project=docs/ docs/make.jl
       after_success: skip
